    [[.pdata.frame).
  * is.pseries: added function to check if an object qualifies as a pseries.
  * (internal) is.index, has.index: new non-exported functions to check if an
    object is or has a proper index (in the sense of the plm package).
  * pvcm object: element 'residuals' is now of class c("pseries", "numeric") 
    (were: "numeric" for within, "matrix" with one column for random model);
    element 'df.residuals' renamed to 'df.residual' (cf. lm, plm, ...).
  * print.pseries: prettier printing for c("pseries", "complex").
  * print.summary.plm: more informative for perfect fits (all residuals are 0).
  * pgmm object: removed element 'df.residual' for now as it contained the
    function of the same name rather than a number; fixed handling of argument
    'lost.ts''s second element.
  * plm/ercomp: informative error messages for non-estimable 'swar' and 'amemiya'
    models when between model lacks observations ('swar') and individual or
    time dimension lacks within variation ('amemiya').
  * plm/model.matrix.pFormula: informative error message for non-finite values.
  * summary.purtest: give informative error message when run on purtest object
    containing result for Hadri's test.
  * pcce, pht, pmg, pggls models: proper names in printed summary's topline.
  * pcce models: pooled model's element 'coefficients' is numeric (was 1x1 matrix).
  * pwaldtest: in all cases, htest object's 'statistic' element is a numeric
    (was 1x1 matrix for some cases).
  * Data set 'Crime' extended with pre-computed log values as in original data.
  
  * Dependencies: added to 'Suggests': knitr, rmarkdown, bookdown.
  
  * Addendum: In plm version 1.6-6, aneweytest() was changed to use the residuals
    of the one-way individual within model (was: two-ways within model).


Changes in version 1.6-6

  * ercomp:
      * re-written to be a more general framework.
      * (internal) returned ercomp object: component 'sigma2' is now a numeric;