@@ -499,9 +499,8 @@ pvcm(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp,
 Balanced Panel: n = 48, T = 17, N = 816
 
 Residuals:
-total sum of squares: 0.3300925 
-          id         time 
-1.564477e-33 2.502363e-01 
+         Min.       1st Qu.        Median       3rd Qu.          Max. 
+-0.0828078889 -0.0118150348  0.0004246566  0.0126479124  0.1189647497 
 
 Coefficients:
   (Intercept)       log(pcap)          log(pc)            log(emp)       
@@ -854,58 +853,11 @@ Multiple R-Squared: 0.99998
  0.3943271427 
 > class(zr$residuals)
 [1] "pseries" "numeric"
-> print(zw$coefficients)
-               (Intercept)    log(pcap)      log(pc)    log(emp)         unemp
-ALABAMA          8.4960384 -1.442643991  0.279501016  1.83524980  0.0073545006
-ARIZONA          4.6652825 -0.162708442 -0.005220745  1.07582801 -0.0036579767
-ARKANSAS         3.2456536 -0.505650280  0.321247275  1.23401732  0.0014922130
-CALIFORNIA       0.2793476  0.263937746  0.248403298  0.69913460 -0.0107451010
-COLORADO         0.5143180  0.731379856 -0.209834096  0.74826795 -0.0039961705
-CONNECTICUT      5.0302333 -0.431134765  0.453161751  0.73256902 -0.0053864641
-DELAWARE        -1.1751222  0.622117695 -0.318462279  1.41693168 -0.0038134886
-FLORIDA          1.5253424  0.552803128 -0.250663389  0.87120938 -0.0014626098
-GEORGIA          2.3034759 -0.419174405  0.085170213  1.57271222  0.0074532847
-IDAHO            1.0421207  0.669179027 -0.117730415  0.64849768 -0.0022465829
-ILLINOIS         2.7209986  0.267159900  0.562804445 -0.02583567 -0.0177828867
-INDIANA         -0.1958694  0.094433742  0.431361911  0.73159208 -0.0122411911
-IOWA             0.6519703  0.315068074 -0.448937790  1.65819044  0.0129198630
-KANSAS           4.2616134 -0.577090938  1.009232156  0.13734950 -0.0196568696
-KENTUCKY         4.8589548 -0.339802089  0.167695130  1.03522134  0.0065278923
-LOUISIANA        9.1692397 -0.766043907  0.413122049  0.68899848 -0.0110422846
-MAINE            3.4194783 -0.574727885 -0.041140070  1.85593766  0.0073599832
-MARYLAND         2.0836014  0.271279613  0.402774922  0.25721726 -0.0230198852
-MASSACHUSETTS    4.1480748 -0.126316063  0.707872550  0.10829928 -0.0189627335
-MICHIGAN        -2.6289878  0.705179007  0.558204463  0.06149498 -0.0276171611
-MINNESOTA        3.5131086 -0.468420802  0.282842652  1.22538453  0.0010910168
-MISSISSIPPI      2.7454146 -0.509188897  0.612760021  0.87390876 -0.0001383713
-MISSOURI         1.4819126 -0.100664957  0.143924926  1.19037073 -0.0023792574
-MONTANA         -0.3975081  0.906695490 -0.138785995  0.56898527 -0.0040704700
-NEBRASKA         1.8053647 -0.623472299  0.551767246  1.31024056  0.0121187207
-NEVADA           3.3304637  0.249054180 -0.164545890  0.95418780 -0.0045551636
-NEW_HAMPSHIRE    4.4065779 -0.780667745  0.210132132  1.59805922  0.0039615055
-NEW_JERSEY       1.3141522  0.017454286  0.220817100  0.95635811 -0.0095804572
-NEW_MEXICO       1.8088567  0.090400088  0.333034832  0.63443828 -0.0045526412
-NEW_YORK        -3.7077921  0.093171306 -0.056573857  1.76714934  0.0086511927
-NORTH_CAROLINA   2.2505857 -0.487354616  0.118923522  1.60259767  0.0068840855
-NORTH_DAKOTA    -3.0588977  1.031200556  0.026176397  0.60159442 -0.0150841340
-OHIO            -1.3583003  0.295918542  0.085197133  1.07805190 -0.0031490545
-OKLAHOMA         3.2764622  0.164259723  0.271001283  0.41794500 -0.0090860260
-OREGON           1.2354574  0.445167666 -0.201887776  1.02059519 -0.0045336550
-PENNSYLVANIA     1.7248609 -0.108841546  0.444167530  0.73210793 -0.0070284949
-RHODE_ISLAND     9.3379762 -0.577016355  0.245877611  0.46142711 -0.0191099852
-SOUTH_CAROLINA   3.3022915 -1.288197300  0.392689259  2.10581712  0.0218609130
-SOUTH_DAKOTA     9.1628627 -0.447357034 -0.523648862  1.53736101  0.0290171539
-TENNESSE         4.1986320 -0.935719227  0.571154076  1.32848192  0.0017310495
-TEXAS            1.2099713  0.582364320 -0.020745015  0.57923229 -0.0128918651
-UTAH             1.9181219  0.134459770 -0.060675214  1.14524806  0.0027350512
-VERMONT          5.1444050 -0.582739243  0.580579238  0.62039329 -0.0138483279
-VIRGINIA         4.4370130 -0.376766084  0.199786090  1.09146532  0.0035871770
-WASHINGTON       3.0425029 -0.108432994  0.328467872  0.75846943 -0.0127182870
-WEST_VIRGINIA    3.7057369 -0.184318358  0.398998044  0.58982596  0.0016567262
-WISCONSIN        3.5501092 -0.605349607  1.232166571  0.04221983 -0.0186540424
-WYOMING          4.4713754 -0.005717267  0.144026008  0.67212383 -0.0120261384
-> class(zw$coefficients)
-[1] "data.frame"
+> print(zr$coefficients)
+(Intercept)   log(pcap)     log(pc)    log(emp)       unemp 
+ 2.56606170 -0.07862810  0.21243586  0.92456793 -0.00405491 
+> class(zr$coefficients)
+[1] "numeric"
 > summary(zr)
 Oneway (individual) effect Random coefficients model
 
@@ -916,9 +868,8 @@ pvcm(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp,
 Balanced Panel: n = 48, T = 17, N = 816
 
 Residuals:
-total sum of squares: 11.7673 
-        id       time 
-0.90116263 0.01618818 
+    Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
+-0.27874 -0.03826  0.03301  0.03531  0.08882  0.71105 
 
 Estimated mean of the coefficients:
               Estimate Std. Error z-value  Pr(>|z|)    
@@ -953,4 +904,4 @@ Chisq: 946.626 on 4 DF, p-value: < 2.22e-16
 > 
 > proc.time()
    user  system elapsed 
-   1.57    0.26    1.81 
+   1.31    0.24    1.52 
